--- a/10718_s2026/schedule.html
+++ b/10718_s2026/schedule.html
@@ -26,7 +26,7 @@
 
                     <tr>
                         <td>1</td>
-                        <td> 1 Tue  Jan 13</td>
+                        <td>Tue  Jan 13</td>
                         <td>lecture</td>
                         <td>Intro and Overview - History, Motivation, Logistics <a href="https://docs.google.com/presentation/d/1KbAJiSjIyrG37v42gRBrpCmGObkyi4byqxh-0T5Dtik/edit?slide=id.g1ef2a953916_0_349#slide=id.g1ef2a953916_0_349"> [Slides]</a></td>
                         <td>
@@ -41,10 +41,8 @@
                         </td>
                     </tr>
                     <tr>
-                    </tr>
-                    <tr>
                         <td>1</td>
-                        <td> 1 Thu  Jan 15</td>
+                        <td>Thu  Jan 15</td>
                         <td>lecture</td>
                         <td>ML Project Deep Dive - Project definition and scoping <a href="https://docs.google.com/presentation/d/1LC3IozgVzUCvQIxFFQbhQDfyGmYoqOUr5LHLgMVEia4/edit?usp=drive_link"> [Slides]</a></td>
                         <td>
@@ -66,10 +64,8 @@
                         </td>
                     </tr>
                     <tr>
-                    </tr>
-                    <tr>
                         <td>2</td>
-                        <td> 2 Tue  Jan 20</td>
+                        <td>Tue  Jan 20</td>
                         <td>lecture</td>
                         <td>Data Preparation - Scraping, Data Integration, Visualization <a href="https://docs.google.com/presentation/d/1P7V8NkByqKaGoInIJu0AWeMYvVojjrxQHRt5OqJe1Tc/edit?slide=id.g2b4449ee465_1_99#slide=id.g2b4449ee465_1_99"> [Slides]</a></td>
                         <td>
@@ -78,10 +74,8 @@
                         </td>
                     </tr>
                     <tr>
-                    </tr>
-                    <tr>
                         <td>2</td>
-                        <td> 2 Thu  Jan 22</td>
+                        <td>Thu  Jan 22</td>
                         <td>lecture</td>
                         <td>Problem Formulation - How ML maps to real world problems <a href="https://docs.google.com/presentation/d/1P1LFU_uE9gKWi2Z1rcT2MiyhagnJPMzXaDdcI9IWYBc/edit?slide=id.g1ef2a953916_0_122#slide=id.g1ef2a953916_0_122"> [Slides]</a></td>
                         <td>
@@ -95,15 +89,18 @@
                         </td>
                     </tr>
                     <tr>
-                    </tr>
-                    <tr>
                         <td>3</td>
-                        <td> 3 Tue  Jan 27</td>
+                        <td>Tue  Jan 27</td>
                         <td>lecture</td>
                         <td>Data & Feature Engineering <a href="https://docs.google.com/presentation/d/1Vd8XvtCcjdV94dBycBEJ4GKih2grqKGHTx-gl6ZjKYA/edit?slide=id.g333bd8d1b57_0_2#slide=id.g333bd8d1b57_0_2"> [Slides]</a></td>
                         <td>
                         </td>
                         <td>
+                        <details><summary style="color:SteelBlue;text-decoration: underline;">HW Deadlines</summary>
+                          <ul>
+                          <li>Project Assignment 0 due (team and alpha version of proposal)
+                          </ul>
+                          </details>
                         <details><summary style="color:SteelBlue;text-decoration: underline;">Required Readings</summary>
                           <ul>
                           <li><a href="https://arxiv.org/abs/2103.14749">Pervasive Label Errors in Test Sets Destabilize Machine Learning Benchmarks</a>
@@ -113,34 +110,43 @@
                         </td>
                     </tr>
                     <tr>
-                    </tr>
-                    <tr>
                         <td>3</td>
-                        <td> 3 Thu  Jan 29</td>
+                        <td>Thu  Jan 29</td>
                         <td>lecture</td>
-                        <td>Model Selection </td>
+                        <td>Evaluation </td>
                         <td>
                         </td>
                         <td>
                         </td>
-                    </tr>
-                    <tr>
                     </tr>
                     <tr>
                         <td>4</td>
-                        <td> 4 Tue  Feb  3</td>
+                        <td>Tue  Feb  3</td>
                         <td>lecture</td>
-                        <td>Project Checkins </td>
+                        <td>Project Checkins 1 </td>
                         <td>
                         </td>
                         <td>
+                        <details><summary style="color:SteelBlue;text-decoration: underline;">HW Deadlines</summary>
+                          <ul>
+                          <li>Project Assignment 1 due (project checkins)
+                          </ul>
+                          </details>
                         </td>
-                    </tr>
-                    <tr>
                     </tr>
                     <tr>
                         <td>4</td>
-                        <td> 4 Thu  Feb  5</td>
+                        <td>Thu  Feb  5</td>
+                        <td>lecture</td>
+                        <td>Project Checkins 2 </td>
+                        <td>
+                        </td>
+                        <td>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>5</td>
+                        <td>Tue  Feb 10</td>
                         <td>lecture</td>
                         <td>Hyperparam Tuning </td>
                         <td>
@@ -149,34 +155,8 @@
                         </td>
                     </tr>
                     <tr>
-                    </tr>
-                    <tr>
                         <td>5</td>
-                        <td> 5 Tue  Feb 10</td>
-                        <td>lecture</td>
-                        <td>Distribution Shift 1 </td>
-                        <td>
-                        </td>
-                        <td>
-                        </td>
-                    </tr>
-                    <tr>
-                    </tr>
-                    <tr>
-                        <td>5</td>
-                        <td> 5 Thu  Feb 12</td>
-                        <td>lecture</td>
-                        <td>Distribution Shift 2 </td>
-                        <td>
-                        </td>
-                        <td>
-                        </td>
-                    </tr>
-                    <tr>
-                    </tr>
-                    <tr>
-                        <td>6</td>
-                        <td> 6 Tue  Feb 17</td>
+                        <td>Thu  Feb 12</td>
                         <td>lecture</td>
                         <td>Privacy </td>
                         <td>
@@ -185,10 +165,23 @@
                         </td>
                     </tr>
                     <tr>
+                        <td>6</td>
+                        <td>Tue  Feb 17</td>
+                        <td>lecture</td>
+                        <td>Project Pitches </td>
+                        <td>
+                        </td>
+                        <td>
+                        <details><summary style="color:SteelBlue;text-decoration: underline;">HW Deadlines</summary>
+                          <ul>
+                          <li>Project Assignment 2 due (project pitches)
+                          </ul>
+                          </details>
+                        </td>
                     </tr>
                     <tr>
                         <td>6</td>
-                        <td> 6 Thu  Feb 19</td>
+                        <td>Thu  Feb 19</td>
                         <td>lecture</td>
                         <td>Project Pitches </td>
                         <td>
@@ -197,22 +190,18 @@
                         </td>
                     </tr>
                     <tr>
-                    </tr>
-                    <tr>
                         <td>7</td>
-                        <td> 7 Tue  Feb 24</td>
+                        <td>Tue  Feb 24</td>
                         <td>lecture</td>
-                        <td>Project Pitches </td>
+                        <td>Distribution Shift </td>
                         <td>
                         </td>
                         <td>
                         </td>
-                    </tr>
-                    <tr>
                     </tr>
                     <tr>
                         <td>7</td>
-                        <td> 7 Thu  Feb 26</td>
+                        <td>Thu  Feb 26</td>
                         <td>lecture</td>
                         <td>Interpretability </td>
                         <td>
@@ -221,46 +210,43 @@
                         </td>
                     </tr>
                     <tr>
+                        <td>8</td>
+                        <td>Tue  Mar  3</td>
+                        <td>lecture</td>
+                        <td>Spring break 1 - no class </td>
+                        <td>
+                        </td>
+                        <td>
+                        </td>
                     </tr>
                     <tr>
                         <td>8</td>
-                        <td> 8 Tue  Mar  3</td>
+                        <td>Thu  Mar  5</td>
                         <td>lecture</td>
-                        <td>Spring break 1 - class cancelled </td>
+                        <td>Spring break 2 - no class </td>
                         <td>
                         </td>
                         <td>
                         </td>
-                    </tr>
-                    <tr>
-                    </tr>
-                    <tr>
-                        <td>8</td>
-                        <td> 8 Thu  Mar  5</td>
-                        <td>lecture</td>
-                        <td>Spring break 2 - class cancelled </td>
-                        <td>
-                        </td>
-                        <td>
-                        </td>
-                    </tr>
-                    <tr>
                     </tr>
                     <tr>
                         <td>9</td>
-                        <td> 9 Tue  Mar 10</td>
+                        <td>Tue  Mar 10</td>
                         <td>lecture</td>
                         <td>Fairness </td>
                         <td>
                         </td>
                         <td>
+                        <details><summary style="color:SteelBlue;text-decoration: underline;">HW Deadlines</summary>
+                          <ul>
+                          <li>Project Assignment 3 due (initial result writeups)
+                          </ul>
+                          </details>
                         </td>
                     </tr>
                     <tr>
-                    </tr>
-                    <tr>
                         <td>9</td>
-                        <td> 9 Thu  Mar 12</td>
+                        <td>Thu  Mar 12</td>
                         <td>lecture</td>
                         <td>Safety </td>
                         <td>
@@ -269,10 +255,8 @@
                         </td>
                     </tr>
                     <tr>
-                    </tr>
-                    <tr>
                         <td>10</td>
-                        <td>10 Tue  Mar 17</td>
+                        <td>Tue  Mar 17</td>
                         <td>lecture</td>
                         <td>Model Compression </td>
                         <td>
@@ -281,10 +265,8 @@
                         </td>
                     </tr>
                     <tr>
-                    </tr>
-                    <tr>
                         <td>10</td>
-                        <td>10 Thu  Mar 19</td>
+                        <td>Thu  Mar 19</td>
                         <td>lecture</td>
                         <td>Uncertainty and Calibration </td>
                         <td>
@@ -293,10 +275,8 @@
                         </td>
                     </tr>
                     <tr>
-                    </tr>
-                    <tr>
                         <td>11</td>
-                        <td>11 Tue  Mar 24</td>
+                        <td>Tue  Mar 24</td>
                         <td>lecture</td>
                         <td>Causality </td>
                         <td>
@@ -305,10 +285,8 @@
                         </td>
                     </tr>
                     <tr>
-                    </tr>
-                    <tr>
                         <td>11</td>
-                        <td>11 Thu  Mar 26</td>
+                        <td>Thu  Mar 26</td>
                         <td>lecture</td>
                         <td>ML and Intervention </td>
                         <td>
@@ -317,102 +295,94 @@
                         </td>
                     </tr>
                     <tr>
+                        <td>12</td>
+                        <td>Tue  Mar 31</td>
+                        <td>lecture</td>
+                        <td>Project Presentations - 1 </td>
+                        <td>
+                        </td>
+                        <td>
+                        <details><summary style="color:SteelBlue;text-decoration: underline;">HW Deadlines</summary>
+                          <ul>
+                          <li>Project Assignment 4 due (proposed extensons)
+                          </ul>
+                          </details>
+                        </td>
                     </tr>
                     <tr>
                         <td>12</td>
-                        <td>12 Tue  Mar 31</td>
+                        <td>Thu  Apr  2</td>
                         <td>lecture</td>
-                        <td>Performativity </td>
+                        <td>Project Presentations - 2 </td>
                         <td>
                         </td>
                         <td>
                         </td>
-                    </tr>
-                    <tr>
-                    </tr>
-                    <tr>
-                        <td>12</td>
-                        <td>12 Thu  Apr  2</td>
-                        <td>lecture</td>
-                        <td>Project Presentations </td>
-                        <td>
-                        </td>
-                        <td>
-                        </td>
-                    </tr>
-                    <tr>
                     </tr>
                     <tr>
                         <td>13</td>
-                        <td>13 Tue  Apr  7</td>
+                        <td>Tue  Apr  7</td>
                         <td>lecture</td>
-                        <td>Project Presentations </td>
+                        <td>Network Effects and ML </td>
                         <td>
                         </td>
                         <td>
                         </td>
-                    </tr>
-                    <tr>
                     </tr>
                     <tr>
                         <td>13</td>
-                        <td>13 Thu  Apr  9</td>
+                        <td>Thu  Apr  9</td>
                         <td>lecture</td>
-                        <td>Carnival - class cancelled </td>
+                        <td>Carnival - no class </td>
                         <td>
                         </td>
                         <td>
                         </td>
-                    </tr>
-                    <tr>
                     </tr>
                     <tr>
                         <td>14</td>
-                        <td>14 Tue  Apr 14</td>
+                        <td>Tue  Apr 14</td>
                         <td>lecture</td>
                         <td>TBA </td>
                         <td>
                         </td>
                         <td>
                         </td>
-                    </tr>
-                    <tr>
                     </tr>
                     <tr>
                         <td>14</td>
-                        <td>14 Thu  Apr 16</td>
+                        <td>Thu  Apr 16</td>
                         <td>lecture</td>
                         <td>TBA </td>
                         <td>
                         </td>
                         <td>
                         </td>
-                    </tr>
-                    <tr>
                     </tr>
                     <tr>
                         <td>15</td>
-                        <td>15 Tue  Apr 21</td>
+                        <td>Tue  Apr 21</td>
                         <td>lecture</td>
-                        <td>TBA </td>
+                        <td>Final Project Presentations - 1 </td>
                         <td>
                         </td>
                         <td>
+                        <details><summary style="color:SteelBlue;text-decoration: underline;">HW Deadlines</summary>
+                          <ul>
+                          <li>Project Assignment 5 due (final writeup and reflections)
+                          </ul>
+                          </details>
                         </td>
-                    </tr>
-                    <tr>
                     </tr>
                     <tr>
                         <td>15</td>
-                        <td>15 Thu  Apr 23</td>
+                        <td>Thu  Apr 23</td>
                         <td>lecture</td>
-                        <td>TBA </td>
+                        <td>Project Presentations -  2 </td>
                         <td>
                         </td>
                         <td>
                         </td>
-                    </tr>
-                    <tr>
                     </tr>
                 </tbody>
             </table>
