--- a/10718_s2026/schedule.html
+++ b/10718_s2026/schedule.html
@@ -58,7 +58,6 @@
                           <ul>
                           <li><a href="https://hdsr.mitpress.mit.edu/pub/wot7mkc1/release/10">Artificial Intelligence—The Revolution Hasn’t Happened Yet</a>
                           <li><a href="http://www.incompleteideas.net/IncIdeas/BitterLesson.html?ref=blog.heim.xyz">The bitter lesson</a>
-                          <li><a href="https://arxiv.org/abs/1906.01998">The secrets of machine learning</a>
                           </ul>
                           </details>
                         </td>
@@ -71,6 +70,12 @@
                         <td>
                         </td>
                         <td>
+                        <details><summary style="color:SteelBlue;text-decoration: underline;">Required Readings</summary>
+                          <ul>
+                          <li><a href="https://dl.acm.org/doi/pdf/10.14778/3415478.3415527?casa_token=D213n2yltscAAAAA:OYnJSExskwfOjSexaSTXTBonlEBT0hXWgqL6ueicfm1UomZke309AiT-BNKJFqon2kbiL84ylhDE">Debugging Large-Scale Data Science Pipelines using Dagger, Rezig et al, VLDB 2020</a>
+                          <li><a href="https://arxiv.org/abs/2302.14233">Goal Driven Discovery of Distributional Differences via Language Descriptions</a>
+                          </ul>
+                          </details>
                         </td>
                     </tr>
                     <tr>
@@ -84,6 +89,8 @@
                         <details><summary style="color:SteelBlue;text-decoration: underline;">Required Readings</summary>
                           <ul>
                           <li><a href="https://www.science.org/doi/10.1126/science.aax2342">Dissecting Racial Bias in an Algorithm Used to Manage the Health of Populations</a>
+                          <li><a href="https://www.wired.com/story/artificial-intelligence-startups-daydream-fashion-recommendations/">Here’s What You Should Know About Launching an AI Startup - WIRED 2025</a>
+                          <li><a href="https://drive.google.com/file/d/1yxDpDwUDsFwoQPAet72-38kTEwG9ygfL/view?usp=drive_link">Here’s What You Should Know ... WIRED (cached version)</a>
                           </ul>
                           </details>
                         </td>
@@ -113,10 +120,17 @@
                         <td>3</td>
                         <td>Thu  Jan 29</td>
                         <td>lecture</td>
-                        <td>Evaluation </td>
+                        <td>Evaluation <a href="https://docs.google.com/presentation/d/1gLzpcJRiCpHw7gYxF9uFR7B6yrbrwanIIIQ3pPYI39Q/edit?slide=id.g3afbf7780e5_0_59#slide=id.g3afbf7780e5_0_59"> [Slides]</a></td>
                         <td>
                         </td>
                         <td>
+                        <details><summary style="color:SteelBlue;text-decoration: underline;">Required Readings</summary>
+                          <ul>
+                          <li><a href="https://aclanthology.org/2024.acl-long.757.pdf">Rephrasing the Web: A Recipe for Compute and Data-Efficient Language Modeling, ACL 2024</a>
+                          <li><a href="https://arxiv.org/pdf/2407.04846">Amazing Things Come From Having Many Good Models, ICML 2024</a>
+                          <li><a href="https://www.science.org/doi/full/10.1126/science.adi6000">Prediction Powered Inference</a>
+                          </ul>
+                          </details>
                         </td>
                     </tr>
                     <tr>
@@ -148,20 +162,35 @@
                         <td>5</td>
                         <td>Tue  Feb 10</td>
                         <td>lecture</td>
-                        <td>Hyperparam Tuning </td>
+                        <td>Hyperparameter tuning <a href="https://docs.google.com/presentation/d/1ANAFFiAU6BzFVvzKcyhfbnNhcKCA9mRQ/edit?usp=drive_link&ouid=108006266785637771510&rtpof=true&sd=true"> [Slides]</a></td>
                         <td>
                         </td>
                         <td>
+                        <details><summary style="color:SteelBlue;text-decoration: underline;">HW Deadlines</summary>
+                          <ul>
+                          <li>hyperband.pptx
+                          </ul>
+                          </details>
+                        <details><summary style="color:SteelBlue;text-decoration: underline;">Required Readings</summary>
+                          <ul>
+                          <li><a href="https://dl.acm.org/doi/abs/10.1145/3097983.3098043">Google Vizier: A Service for Black-Box Optimization (KDD 2017)</a>
+                          </ul>
+                          </details>
                         </td>
                     </tr>
                     <tr>
                         <td>5</td>
                         <td>Thu  Feb 12</td>
                         <td>lecture</td>
-                        <td>Privacy </td>
+                        <td>Interpretability </td>
                         <td>
                         </td>
                         <td>
+                        <details><summary style="color:SteelBlue;text-decoration: underline;">Required Readings</summary>
+                          <ul>
+                          <li><a href="https://spawn-queue.acm.org/doi/pdf/10.1145/3236386.3241340">The Mythos of Interpretability, Lipton 2018</a>
+                          </ul>
+                          </details>
                         </td>
                     </tr>
                     <tr>
@@ -193,7 +222,7 @@
                         <td>7</td>
                         <td>Tue  Feb 24</td>
                         <td>lecture</td>
-                        <td>Distribution Shift </td>
+                        <td>Privacy </td>
                         <td>
                         </td>
                         <td>
@@ -203,7 +232,7 @@
                         <td>7</td>
                         <td>Thu  Feb 26</td>
                         <td>lecture</td>
-                        <td>Interpretability </td>
+                        <td>Distribution Shift and Robustness </td>
                         <td>
                         </td>
                         <td>
@@ -378,7 +407,7 @@
                         <td>15</td>
                         <td>Thu  Apr 23</td>
                         <td>lecture</td>
-                        <td>Project Presentations -  2 </td>
+                        <td>Final Project Presentations -  2 </td>
                         <td>
                         </td>
                         <td>
