--- a/10718_s2026/index.html
+++ b/10718_s2026/index.html
@@ -14,21 +14,25 @@
 
 <ul>
 <li>Instructor: William Cohen (wcohen@cmu.edu)
+   <ul><li>Nikash Bhardwaj nikashb@andrew.cmu.edu
+       <li>Steven Kolawole skolawol@andrew.cmu.edu
+       <li>Karish Grover karishg@andrew.cmu.edu 
+   </ul>
 <li>Times: Tue-Thus 3:30-4:50pm
 <li>Resources:
   <ul>
     <li><a href="schedule.html">Schedule of meetings</a>
     <li>Shared <a href="https://drive.google.com/drive/folders/1bzlOncnA87_yNk16tDi8k_uhbe_ht-Gf">GDrive</a> for class
     <li><a href="https://docs.google.com/document/d/1toAm2vrolMIanQYq5KaKN_x5q6eVLFhhCInaBx1RYwQ/edit?tab=t.0">Sample datasets for project</a>
-    <li>Piazza: TODO
-    <li>Gradescope: TODO
+    <li><a href="https://piazza.com/class/mk44aozxb9l1n1/post/1">Piazza</a>
+    <li><a href="https://canvas.cmu.edu/courses/52200">Gradescope</a>
     <li>Signup sheet for presentations/discussions: TODO
   </ul>
-<li>Prior versions of this course:
+<li>Recent prior versions of this course:
   <ul>
-    <li>Dr. Ghani <a href="https://github.com/dssg/MLinPractice">Fall 2025</a>
-    <li>Dr. Smith <a href="https://drive.google.com/drive/folders/1tAvlUV8zuc63yK3H1aw6-jQDMCkQIpkI">Spring 2025</a>
-    <li>Dr. Wilder <a href="https://github.com/bwilder0/10718_f2024?tab=readme-ov-file">Fall 2024</a>
+    <li>Prof. Ghani <a href="https://github.com/dssg/MLinPractice">Fall 2025</a>
+    <li>Prof. Smith <a href="https://drive.google.com/drive/folders/1tAvlUV8zuc63yK3H1aw6-jQDMCkQIpkI">Spring 2025</a>
+    <li>Prof. Wilder <a href="https://github.com/bwilder0/10718_f2024?tab=readme-ov-file">Fall 2024</a>
    </ul>
 </ul>
 
