--- a/10718_s2026/index.html
+++ b/10718_s2026/index.html
@@ -19,6 +19,7 @@
        <li>Karish Grover karishg@andrew.cmu.edu 
    </ul>
 <li>Times: Tue-Thus 3:30-4:50pm
+<li>Location: GHC 4307
 <li>Resources:
   <ul>
     <li><a href="schedule.html">Schedule of meetings</a>
