fiddling with google forms as output

--- a/10718_s2026/index.html
+++ b/10718_s2026/index.html
@@ -23,10 +23,10 @@
 <li>Resources:
   <ul>
     <li><a href="schedule.html">Schedule of meetings</a>
-    <li>Shared <a href="https://drive.google.com/drive/folders/1bzlOncnA87_yNk16tDi8k_uhbe_ht-Gf">GDrive</a> for class
     <li><a href="https://docs.google.com/document/d/1toAm2vrolMIanQYq5KaKN_x5q6eVLFhhCInaBx1RYwQ/edit?tab=t.0">Sample datasets for project</a>
     <li><a href="https://piazza.com/class/mk44aozxb9l1n1/post/1">Piazza</a>
-    <li><a href="https://canvas.cmu.edu/courses/52200">Gradescope</a>
+    <li><a href="https://canvas.cmu.edu/courses/52200">Canvas</a>
+    <li><a href="https://www.gradescope.com/courses/1214404">Gradescope</a>
     <li>Signup sheet for presentations/discussions: TODO
   </ul>
 <li>Recent prior versions of this course:
