clean up content element

--- a/10718_s2026/schedule.html
+++ b/10718_s2026/schedule.html
@@ -108,7 +108,7 @@
                         <td>
                         </td>
                         <td>
-                        <details><summary style="color:SteelBlue;text-decoration: underline;">HW Deadlines</summary>
+                        <details><summary style="color:SteelBlue;text-decoration: underline;">Deadlines</summary>
                           <ul>
                           <li>Project Assignment 0 due (team and alpha version of proposal)
                           </ul>
@@ -146,7 +146,7 @@
                         <td>
                         </td>
                         <td>
-                        <details><summary style="color:SteelBlue;text-decoration: underline;">HW Deadlines</summary>
+                        <details><summary style="color:SteelBlue;text-decoration: underline;">Deadlines</summary>
                           <ul>
                           <li>Project Assignment 1 due (project checkins)
                           </ul>
@@ -171,11 +171,6 @@
                         <td>
                         </td>
                         <td>
-                        <details><summary style="color:SteelBlue;text-decoration: underline;">HW Deadlines</summary>
-                          <ul>
-                          <li>hyperband.pptx
-                          </ul>
-                          </details>
                         <details><summary style="color:SteelBlue;text-decoration: underline;">Required readings/feedback</summary>
                           <ul>
                           <li><a href="https://dl.acm.org/doi/abs/10.1145/3097983.3098043">Google Vizier: A Service for Black-Box Optimization (KDD 2017)</a>
@@ -206,7 +201,7 @@
                         <td>
                         </td>
                         <td>
-                        <details><summary style="color:SteelBlue;text-decoration: underline;">HW Deadlines</summary>
+                        <details><summary style="color:SteelBlue;text-decoration: underline;">Deadlines</summary>
                           <ul>
                           <li>Project Assignment 2 due (project pitches)
                           </ul>
@@ -271,7 +266,7 @@
                         <td>
                         </td>
                         <td>
-                        <details><summary style="color:SteelBlue;text-decoration: underline;">HW Deadlines</summary>
+                        <details><summary style="color:SteelBlue;text-decoration: underline;">Deadlines</summary>
                           <ul>
                           <li>Project Assignment 3 due (initial result writeups)
                           </ul>
@@ -336,7 +331,7 @@
                         <td>
                         </td>
                         <td>
-                        <details><summary style="color:SteelBlue;text-decoration: underline;">HW Deadlines</summary>
+                        <details><summary style="color:SteelBlue;text-decoration: underline;">Deadlines</summary>
                           <ul>
                           <li>Project Assignment 4 due (proposed extensons)
                           </ul>
@@ -401,7 +396,7 @@
                         <td>
                         </td>
                         <td>
-                        <details><summary style="color:SteelBlue;text-decoration: underline;">HW Deadlines</summary>
+                        <details><summary style="color:SteelBlue;text-decoration: underline;">Deadlines</summary>
                           <ul>
                           <li>Project Assignment 5 due (final writeup and reflections)
                           </ul>
