--- a/10718_s2026/schedule.html
+++ b/10718_s2026/schedule.html
@@ -38,9 +38,14 @@
                           </details>
                         </td>
                         <td>
-                        <details><summary style="color:SteelBlue;text-decoration: underline;">Required readings/feedback</summary>
+                        <details><summary style="color:SteelBlue;text-decoration: underline;">Feedback to give</summary>
                           <ul>
                           <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSeuI9DWWKykfD0OAawf8eakQT5JF6jmyhEl7V0A5XS15uHFtg/viewform?usp=sharing&ouid=108006266785637771510">Give feedback</a>
+                          </ul>
+                          </details>
+                        <details><summary style="color:SteelBlue;text-decoration: underline;">Signup to present</summary>
+                          <ul>
+                          <li><a href="https://docs.google.com/spreadsheets/d/1iT9nifZgcd0Cwr2BdKEPFd3CrAqvvrrFS50s-RY_8S0/edit?gid=1447089098#gid=1447089098">Signup</a>
                           </ul>
                           </details>
                         </td>
@@ -59,7 +64,7 @@
                           </details>
                         </td>
                         <td>
-                        <details><summary style="color:SteelBlue;text-decoration: underline;">Required readings/feedback</summary>
+                        <details><summary style="color:SteelBlue;text-decoration: underline;">Required readings</summary>
                           <ul>
                           <li><a href="https://hdsr.mitpress.mit.edu/pub/wot7mkc1/release/10">Artificial Intelligence—The Revolution Hasn’t Happened Yet</a>
                           <li><a href="http://www.incompleteideas.net/IncIdeas/BitterLesson.html?ref=blog.heim.xyz">The bitter lesson</a>
@@ -75,7 +80,12 @@
                         <td>
                         </td>
                         <td>
-                        <details><summary style="color:SteelBlue;text-decoration: underline;">Required readings/feedback</summary>
+                        <details><summary style="color:SteelBlue;text-decoration: underline;">Deadlines</summary>
+                          <ul>
+                          <li>Signup to present in first 1/2 of course
+                          </ul>
+                          </details>
+                        <details><summary style="color:SteelBlue;text-decoration: underline;">Required readings</summary>
                           <ul>
                           <li><a href="https://dl.acm.org/doi/pdf/10.14778/3415478.3415527?casa_token=D213n2yltscAAAAA:OYnJSExskwfOjSexaSTXTBonlEBT0hXWgqL6ueicfm1UomZke309AiT-BNKJFqon2kbiL84ylhDE">Debugging Large-Scale Data Science Pipelines using Dagger, Rezig et al, VLDB 2020</a>
                           <li><a href="https://arxiv.org/abs/2302.14233">Goal Driven Discovery of Distributional Differences via Language Descriptions</a>
@@ -91,7 +101,7 @@
                         <td>
                         </td>
                         <td>
-                        <details><summary style="color:SteelBlue;text-decoration: underline;">Required readings/feedback</summary>
+                        <details><summary style="color:SteelBlue;text-decoration: underline;">Required readings</summary>
                           <ul>
                           <li><a href="https://www.science.org/doi/10.1126/science.aax2342">Dissecting Racial Bias in an Algorithm Used to Manage the Health of Populations</a>
                           <li><a href="https://www.wired.com/story/artificial-intelligence-startups-daydream-fashion-recommendations/">Here’s What You Should Know About Launching an AI Startup - WIRED 2025</a>
@@ -113,7 +123,7 @@
                           <li>Project Assignment 0 due (team and alpha version of proposal)
                           </ul>
                           </details>
-                        <details><summary style="color:SteelBlue;text-decoration: underline;">Required readings/feedback</summary>
+                        <details><summary style="color:SteelBlue;text-decoration: underline;">Required readings</summary>
                           <ul>
                           <li><a href="https://arxiv.org/abs/2103.14749">Pervasive Label Errors in Test Sets Destabilize Machine Learning Benchmarks</a>
                           <li><a href="https://arxiv.org/abs/2205.09911">Can Foundation Models Wrangle Your Data?</a>
@@ -129,7 +139,7 @@
                         <td>
                         </td>
                         <td>
-                        <details><summary style="color:SteelBlue;text-decoration: underline;">Required readings/feedback</summary>
+                        <details><summary style="color:SteelBlue;text-decoration: underline;">Required readings</summary>
                           <ul>
                           <li><a href="https://aclanthology.org/2024.acl-long.757.pdf">Rephrasing the Web: A Recipe for Compute and Data-Efficient Language Modeling, ACL 2024</a>
                           <li><a href="https://arxiv.org/pdf/2407.04846">Amazing Things Come From Having Many Good Models, ICML 2024</a>
@@ -171,7 +181,7 @@
                         <td>
                         </td>
                         <td>
-                        <details><summary style="color:SteelBlue;text-decoration: underline;">Required readings/feedback</summary>
+                        <details><summary style="color:SteelBlue;text-decoration: underline;">Required readings</summary>
                           <ul>
                           <li><a href="https://dl.acm.org/doi/abs/10.1145/3097983.3098043">Google Vizier: A Service for Black-Box Optimization (KDD 2017)</a>
                           </ul>
@@ -186,7 +196,7 @@
                         <td>
                         </td>
                         <td>
-                        <details><summary style="color:SteelBlue;text-decoration: underline;">Required readings/feedback</summary>
+                        <details><summary style="color:SteelBlue;text-decoration: underline;">Required readings</summary>
                           <ul>
                           <li><a href="https://spawn-queue.acm.org/doi/pdf/10.1145/3236386.3241340">The Mythos of Interpretability, Lipton 2018</a>
                           </ul>
