--- a/10718_s2026/index.html
+++ b/10718_s2026/index.html
@@ -150,11 +150,11 @@ provided.</p>
 Each component will contribute towards the final grade as follows:
 
 <h4>Discussion participation</h4>
-Discussion and participation is 40%, graded out of 30 points.
+Discussion and participation is 35%, graded out of 30 points.
 
 <ul>
 <li> Presenter assignments: 3 over the course of the semester, 5 points each. 15 total points
-<li> Non-presenter assignments: 15 over the course of the semester (out of 16 possible sessions), 1 point each
+<li> Non-presenter assignments: 15 over the course of the semester, 1 point each
 <li> You are allowed to miss one non-presenter assignment without penalty.
 <li> This format may be adjusted as needed during the semester.
 </ul>
@@ -163,12 +163,11 @@ Discussion and participation is 40%, graded out of 30 points.
 The project is 60%, graded out of 100 points
 
 <ul>
-<li> Assignment 0: 5 points
-<li> Assignment 1: 20 points
-<li> Assignment 2: 20 points
-<li> Assignment 3: 20 points
-<li> Assignment 4: 20 points
-<li> Final presentation: 15 points
+<li> Assignment 0 (dataset): 5 points
+<li> Assignment 1 (proposal and data exploration): 15 points
+<li> Assignment 2 (baselines): 15 points
+<li> Assignment 3 (additional metrics): 15 points
+<li> Assignment 4 (final report): 15 points
 </ul>
 
 
