--- a/10718_s2026/index.html
+++ b/10718_s2026/index.html
@@ -19,7 +19,7 @@
        <li>Karish Grover karishg@andrew.cmu.edu 
    </ul>
 <li>Times: Tue-Thus 3:30-4:50pm
-<li>Location: GHC 4307
+<li>Location: GHC 4307 (across from elevators)
 <li>Resources:
   <ul>
     <li><a href="schedule.html">Schedule of meetings</a>
@@ -152,15 +152,12 @@ Each component will contribute towards the final grade as follows:
 <h4>Discussion participation</h4>
 Discussion and participation is 35%, graded out of 30 points.
 
-<ul>
-<li> Presenter assignments: 3 over the course of the semester, 5 points each. 15 total points
-<li> Non-presenter assignments: 15 over the course of the semester, 1 point each
-<li> You are allowed to miss one non-presenter assignment without penalty.
-<li> This format may be adjusted as needed during the semester.
-</ul>
+<p>
+Grading scheme for presentations and participation are still TBD.
+
 
 <h4>Course project</h4>
-The project is 60%, graded out of 100 points
+The project is 65%, graded out of 100 points
 
 <ul>
 <li> Assignment 0 (dataset): 5 points
