--- a/10718_s2026/index.html
+++ b/10718_s2026/index.html
@@ -127,6 +127,13 @@ references that may be helpful are:
 <p>If you are not presenting the paper, you must still read the paper
   and provide at least one discussion question about the paper (e.g.,
   something you're uncertain about or would like to hear discussed).
+  This will be submitted via gradescope.
+</p>
+
+<p>If you are not able to be present on a day when papers are
+  discussed, you should get the instructors approval in advance.
+  As a make-up assignment, you should submit a 3-5 minute video
+  review of each discussion paper.
 </p>
 
 <h3>Course project</h3>
