better link for vldb

--- a/10718_s2026/schedule.html
+++ b/10718_s2026/schedule.html
@@ -100,7 +100,7 @@
                           </details>
                         <details><summary style="color:SteelBlue;text-decoration: underline;">Required readings</summary>
                           <ul>
-                          <li><a href="https://dl.acm.org/doi/pdf/10.14778/3415478.3415527?casa_token=D213n2yltscAAAAA:OYnJSExskwfOjSexaSTXTBonlEBT0hXWgqL6ueicfm1UomZke309AiT-BNKJFqon2kbiL84ylhDE">Debugging Large-Scale Data Science Pipelines using Dagger, Rezig et al, VLDB 2020</a>
+                          <li><a href="https://www.vldb.org/pvldb/vol13/p2993-rezig.pdf">Debugging Large-Scale Data Science Pipelines using Dagger, Rezig et al, VLDB 2020</a>
                           <li><a href="https://arxiv.org/abs/2302.14233">Goal Driven Discovery of Distributional Differences via Language Descriptions</a>
                           </ul>
                           </details>
