--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
       <h3 class="sec"><a name="bio"></a>Biography</h3 class="sec">
 
-      William Cohen is a Visiting Professor at Carnegie Mellon University in
+      William Cohen is a Professor at Carnegie Mellon University in
       the <a href="http://www.ml.cmu.edu">Machine Learning Department</a>.
       He also holds a position as a Principal Scientist at Google, where he
       worked full-time between May 2018 and March 2024.  He received his
