moved stuff around!

--- a/10718_s2026/schedule.html
+++ b/10718_s2026/schedule.html
@@ -170,6 +170,39 @@
                         <td>4</td>
                         <td>Tue  Feb  3</td>
                         <td>lecture</td>
+                        <td>Hyperparameter tuning <a href="https://docs.google.com/presentation/d/1ANAFFiAU6BzFVvzKcyhfbnNhcKCA9mRQ/edit?usp=drive_link&ouid=108006266785637771510&rtpof=true&sd=true"> [Slides]</a></td>
+                        <td>
+                        </td>
+                        <td>
+                        <details><summary style="color:SteelBlue;text-decoration: underline;">Required readings</summary>
+                          <ul>
+                          <li><a href="https://dl.acm.org/doi/abs/10.1145/3097983.3098043">Google Vizier: A Service for Black-Box Optimization (KDD 2017)</a>
+                          <li><a href="https://arxiv.org/abs/2205.13504">Are Transformers Effective for Time Series Forecasting? (AAAI 2023)</a>
+                          </ul>
+                          </details>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>4</td>
+                        <td>Thu  Feb  5</td>
+                        <td>lecture</td>
+                        <td>Interpretability </td>
+                        <td>
+                        </td>
+                        <td>
+                        <details><summary style="color:SteelBlue;text-decoration: underline;">Required readings</summary>
+                          <ul>
+                          <li><a href="https://spawn-queue.acm.org/doi/pdf/10.1145/3236386.3241340">The Mythos of Interpretability, Lipton 2018</a>
+                          <li><a href="https://arxiv.org/abs/2512.18311">Monitoring Monitorability, Guan et al 2025</a>
+                          <li><a href="https://arxiv.org/abs/2503.11926">Monitoring Reasoning Models for Misbehavior and the Risks of Promoting Obfuscation, Baker et al, 2025</a>
+                          </ul>
+                          </details>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>5</td>
+                        <td>Tue  Feb 10</td>
+                        <td>lecture</td>
                         <td>Project Checkins 1 </td>
                         <td>
                         </td>
@@ -182,8 +215,8 @@
                         </td>
                     </tr>
                     <tr>
-                        <td>4</td>
-                        <td>Thu  Feb  5</td>
+                        <td>5</td>
+                        <td>Thu  Feb 12</td>
                         <td>lecture</td>
                         <td>Project Checkins 2 </td>
                         <td>
@@ -192,38 +225,28 @@
                         </td>
                     </tr>
                     <tr>
-                        <td>5</td>
-                        <td>Tue  Feb 10</td>
+                        <td>6</td>
+                        <td>Tue  Feb 17</td>
                         <td>lecture</td>
-                        <td>Hyperparameter tuning <a href="https://docs.google.com/presentation/d/1ANAFFiAU6BzFVvzKcyhfbnNhcKCA9mRQ/edit?usp=drive_link&ouid=108006266785637771510&rtpof=true&sd=true"> [Slides]</a></td>
+                        <td>Privacy </td>
                         <td>
                         </td>
                         <td>
-                        <details><summary style="color:SteelBlue;text-decoration: underline;">Required readings</summary>
-                          <ul>
-                          <li><a href="https://dl.acm.org/doi/abs/10.1145/3097983.3098043">Google Vizier: A Service for Black-Box Optimization (KDD 2017)</a>
-                          </ul>
-                          </details>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>5</td>
-                        <td>Thu  Feb 12</td>
-                        <td>lecture</td>
-                        <td>Interpretability </td>
-                        <td>
-                        </td>
-                        <td>
-                        <details><summary style="color:SteelBlue;text-decoration: underline;">Required readings</summary>
-                          <ul>
-                          <li><a href="https://spawn-queue.acm.org/doi/pdf/10.1145/3236386.3241340">The Mythos of Interpretability, Lipton 2018</a>
-                          </ul>
-                          </details>
                         </td>
                     </tr>
                     <tr>
                         <td>6</td>
-                        <td>Tue  Feb 17</td>
+                        <td>Thu  Feb 19</td>
+                        <td>lecture</td>
+                        <td>Distribution Shift and Robustness </td>
+                        <td>
+                        </td>
+                        <td>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>7</td>
+                        <td>Tue  Feb 24</td>
                         <td>lecture</td>
                         <td>Project Pitches </td>
                         <td>
@@ -237,30 +260,10 @@
                         </td>
                     </tr>
                     <tr>
-                        <td>6</td>
-                        <td>Thu  Feb 19</td>
-                        <td>lecture</td>
-                        <td>Project Pitches </td>
-                        <td>
-                        </td>
-                        <td>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>7</td>
-                        <td>Tue  Feb 24</td>
-                        <td>lecture</td>
-                        <td>Privacy </td>
-                        <td>
-                        </td>
-                        <td>
-                        </td>
-                    </tr>
-                    <tr>
                         <td>7</td>
                         <td>Thu  Feb 26</td>
                         <td>lecture</td>
-                        <td>Distribution Shift and Robustness </td>
+                        <td>Project Pitches </td>
                         <td>
                         </td>
                         <td>
