added some possible readings

--- a/10718_s2026/schedule.html
+++ b/10718_s2026/schedule.html
@@ -232,6 +232,11 @@
                         <td>
                         </td>
                         <td>
+                        <details><summary style="color:SteelBlue;text-decoration: underline;">Required readings</summary>
+                          <ul>
+                          <li><a href="https://research.google/blog/distributed-differential-privacy-for-federated-learning/">Distributed differential privacy for federated learning, 2023</a>
+                          </ul>
+                          </details>
                         </td>
                     </tr>
                     <tr>
@@ -342,6 +347,12 @@
                         <td>
                         </td>
                         <td>
+                        <details><summary style="color:SteelBlue;text-decoration: underline;">Required readings</summary>
+                          <ul>
+                          <li><a href="https://jmlr.org/papers/v23/19-480.html">Causal Classification: Treatment Effect Estimation vs. Outcome Prediction, 2022</a>
+                          <li><a href="https://arxiv.org/abs/2407.07596">Learning treatment effects while treating those in need, Bryan Wilder, Pim Welle, 2024</a>
+                          </ul>
+                          </details>
                         </td>
                     </tr>
                     <tr>
